feat: :sparkles: add background color to swipe component
 - update with cancel event
 - update example
 - fix docs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 
-<ngx-slide-to-confirm></ngx-slide-to-confirm>
+<ngx-slide-to-confirm
+  [color]="'yellowgreen'"
+  [backgroundColor]="'#034013'"
+  [reset]="true"
+  (confirmEvent)="onConfirmed()"
+  (resetEvent)="onReset()"
+></ngx-slide-to-confirm>
