--- a/projects/slide-to-confirm/src/lib/slide-to-confirm.component.html
+++ b/projects/slide-to-confirm/src/lib/slide-to-confirm.component.html
@@ -1,9 +1,9 @@
 <div id="slide-to-confirm-wrapper" class="slide-to-confirm-wrapper"
-  [style.background]="'linear-gradient(90deg, rgb(24, 201, 98) '+percentageSuccess+'%, '+color+' '+percentage+'%)'">
+  [style.background]="'linear-gradient(90deg, ' + backgroundColor + ' ' + percentageSuccess + '%, ' + color + ' ' + percentage + '%)'">
   <div class="slide-to-hint-text">
 
-    <span *ngIf="!isConfirmed"  [style.opacity]='opacity'>{{ placeHolder }} </span>
-    <span  *ngIf="isConfirmed" >{{ successText }} </span>
+    <span *ngIf="!isConfirmed" [style.opacity]="opacity">{{ placeHolder }} </span>
+    <span *ngIf="isConfirmed">{{ successText }} </span>
   </div>
 
   <div class="slide-to-confirm-boundry-wrapper">
@@ -27,8 +27,8 @@
       <!-- Drag Target -->
       <div class="slide-to-confirm-target" cdkDropList (cdkDropListDropped)="drop($event)">
         <!-- Drag Handle -->
-        <div class="slide-to-confirm-handle" *ngIf='isConfirmed'>
-          <span class='slide-to-icon'>{{'✓'}}</span>
+        <div class="slide-to-confirm-handle" *ngIf='isConfirmed' (click)="onCancel()">
+          <span class='slide-to-icon'>{{ reset ? resetIcon : confirmedIcon }}</span>
         </div>
       </div>
     </ng-container>
